[package]
name = "webpage_monitor"
version = "0.9.0"
edition = "2024"

[dependencies]
tokio = { version = "^1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "^0.13" }
scraper = "^0.25"
sha2 = "^0.10"
ratatui = "^0.30"
crossterm = "^0.29"
chrono = "^0.4"
anyhow = "^1"
similar = "^2"
regex = "^1"
